"Add: Añadir header btns, styles, animaciones. Fixed logica PiltotResponseDTO para mostrar datos correctos en front. Añadir más carreras y resultados para observar comportamiento gráficas"